logs/weakpoint.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/misaka'...
Listing './lib/python3.5/site-packages/misaka-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/weakpoint'...
Compiling './lib/python3.5/site-packages/weakpoint/core.py'...
***   File "./lib/python3.5/site-packages/weakpoint/core.py", line 83
    except RendererException, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/weakpoint/main.py'...
***   File "./lib/python3.5/site-packages/weakpoint/main.py", line 16
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/weakpoint/parsers'...
Listing './lib/python3.5/site-packages/weakpoint/themes'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark/_templates'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark/_templates/_settings'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark/_templates/_slides'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark/assets'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark/assets/css'...
Listing './lib/python3.5/site-packages/weakpoint/themes/dark/assets/js'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light/_templates'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light/_templates/_settings'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light/_templates/_slides'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light/assets'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light/assets/css'...
Listing './lib/python3.5/site-packages/weakpoint/themes/light/assets/js'...
Listing './lib/python3.5/site-packages/weakpoint-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
